# IndyOps

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  LICENSE-CCP.md  README.md  codecov.yml  docker-compose.yml  indyops-wave2-tasks-jira.csv
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: jobs.py  main.py  migrate.py  worker.py
backend/app/adapters/: analytics_engine.py  chain_engine.py  demand_engine.py  esi.py  forecast_engine.py  invention_optimizer.py  market.py  portfolio.py  profit_sim.py  reaction_planner_engine.py  risk_engine.py  scenario_sim.py  sim_data.py
backend/app/api/: account_router.py  agenda_router.py  analysis_router.py  auth_router.py  blueprint_analyzer_router.py  blueprints_router.py  characters_router.py  deliveries_router.py  encyclopedia_router.py  eve_router.py  facilities_router.py  haul_router.py  inventory_router.py  manufacturing_router.py  market_router.py  ore_router.py  organisations_router.py  projects_router.py  reaction_planner_router.py  research_router.py  responses.py  simulation_router.py  tracking_router.py  trade_router.py
backend/app/core/: config.py  crypto.py  database.py  database_eve.py  indices_data.py  schemas.py  security.py  timeutil.py  trade_data.py
backend/app/repositories/: cache_repo.py  cost_index_repo.py  eve.py  eve_market.py  forecast_repo.py  market_repo.py  share_repo.py  trade_repo.py
backend/app/services/: _numeric.py  _special.py  alerts.py  allocation.py  asset_location.py  assignment.py  barcodes.py  blueprint_collection.py  blueprints.py  chain.py  costing.py  currency.py  delivery.py  demand.py  facility_bonus.py  forecast.py  income.py  index_report.py  indicators.py  indices.py  industry_ledger.py  invention.py  invention_opt.py  loot.py  manufacturing.py  market_browser.py  market_model.py  mining_journal.py  orders.py  ore_acquisition.py  ore_basket.py  pi.py  portfolio.py  portfolio_report_pdf.py  pricing.py  production_report_pdf.py  profit_sim.py  ratelimit.py  reaction_planner.py  refining.py  (+12 more)
backend/app/tasks/: evaluate_alerts.py  scheduler.py  update_cost_indices.py  update_esi.py  update_forecasts.py  update_indices.py  update_sde.py  update_tracking.py  update_trade.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_facilitytype_uppercase.py  0003_org_public_members.py  0004_blueprints.py  0005_simulation_runs.py  0006_esi_characters.py  0007_esi_standings.py  0008_deliveries.py  0009_delivery_status_events.py  0010_production_status_events.py  0011_trade_candidates.py  0012_esi_structures.py  0013_character_overview.py  0014_mining_journal.py  0015_agenda_alerts.py  0016_character_flags.py  0017_job_kind.py  0018_scenario_analyses.py  0019_share_codes.py  0020_quiz_results.py  0021_esi_blueprints.py  0022_system_cost_indices.py  0023_haul_candidates.py  0024_haul_meta_groups.py  0025_visibility_follow.py  0026_haul_jita_buy_volume.py  0027_market_forecasts.py  0028_esi_market_orders.py  0029_bank_ledger.py  0030_tracking_income.py  0031_reprocessing_presets.py  0032_contract_items.py  0033_job_cost_overrides.py  0034_tracking_exclusions.py  0035_reprocessing_preset_structure.py  0036_esi_planets.py  0037_corp_tracking.py  0038_job_notify.py  0039_corp_esi.py  0040_corp_assets_contracts.py
backend/tests/: conftest.py  test_account_endpoints.py  test_adapter_esi.py  test_adapter_market.py  test_adapter_sim_data.py  test_agenda.py  test_allocation.py  test_analysis_endpoints.py  test_analytics_fortran_parity.py  test_asset_location.py  test_assignment.py  test_auth_endpoints.py  test_barcodes.py  test_blueprint_analyzer_endpoint.py  test_blueprint_collection.py  test_blueprints_endpoints.py  test_blueprints_service.py  test_bom_tree.py  test_cache_repo.py  test_chain.py  test_chain_endpoint.py  test_chain_haskell_parity.py  test_character_endpoints.py  test_corp_data.py  test_corp_scope.py  test_costing.py  test_currency.py  test_delivery.py  test_delivery_contracts.py  test_demand_fortran_parity.py  test_encyclopedia.py  test_esi.py  test_eve_endpoints.py  test_facilities_endpoints.py  test_facility_bonus.py  test_forecast_fortran_parity.py  test_haul.py  test_haul_scan.py  test_index_report.py  test_indicators.py  (+67 more)
haskell/chain-engine/: README.md  chain-engine.cabal  sample-request.json
haskell/invention-optimizer/: .gitignore  invention-optimizer.cabal
haskell/risk-engine/: risk-engine.cabal  sample-request.json
haskell/risk-engine/app/: Main.hs
(+735 files in other folders)
