# Tooling config only (pytest / coverage / ruff). No [build-system]/[project]
# on purpose — the Docker image installs from requirements.txt, not this package.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/worker.py",
    "app/migrate.py",
    "app/jobs.py",
    "app/tasks/update_sde.py",
    "app/**/__init__.py",   # empty package markers — not code
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# High-signal, low-noise: pyflakes (unused imports / undefined names) + syntax.
select = ["E9", "F"]
