cabal-version:      2.4
name:               invention-optimizer
version:            0.1.0
synopsis:           Invention decryptor × product optimizer (production-profit ranking)
build-type:         Simple


common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Json
                      Invention.Types
                      Invention.Optimize
    build-depends:    base >=4.14
    default-language: Haskell2010

executable invention-optimizer
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base, invention-optimizer
    default-language: Haskell2010

test-suite invention-optimizer-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   tests
    build-depends:    base, invention-optimizer
    default-language: Haskell2010
